k8s/dept.yaml
apiVersion: v1
kind: Deployment
metadata:
  name: static-dept
  namespace: static
spec:
  selector:
    matchLabels:
      app: static-dept
  template:
    metadata:
      labels:
        app: static
    spec:
      containers:
      - name: static
        image: 274401088258.dkr.ecr.ap-southeast-1.amazonaws.com/aws-eks:number .
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
