k8s/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: static-svc
  namespace: static
spec:
  selector:
    app: static-dept
  ports:
  - port: 80
    targetPort: 80
